--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,12 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@apollo/server": "^4.11.0",
+    "@babel/preset-env": "^7.25.7",
+    "@babel/preset-react": "^7.25.7",
     "@types/express": "^4.17.1",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
     "typescript": "^5.6.2"
   },
   "dependencies": {
