--- a/web/package.json
+++ b/web/package.json
@@ -6,6 +6,7 @@
     "@apollo/client": "^3.11.8",
     "@nextui-org/react": "^2.4.8",
     "@nextui-org/table": "^2.0.40",
+    "@react-stately/data": "^3.11.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -46,6 +47,8 @@
     ]
   },
   "devDependencies": {
+    "@apollo/server": "^4.11.0",
+    "jest": "^27.5.1",
     "tailwindcss": "^3.4.13"
   }
 }
